# ncn-program-template-bls

./: .cursorignore  .env.example  .gitmodules  Cargo.toml  README.md  ncn_program-keypair.json  rust-toolchain.toml
.cargo/: config.toml  programs.env
cli/: Cargo.toml  Dockerfile  VOTE_COMMANDS.md  api-docs.md  getting_started.md
cli/src/: args.rs  bls_keys.rs  getters.rs  handler.rs  instructions.rs  lib.rs
cli/src/keeper/: keeper_loop.rs  keeper_metrics.rs  keeper_state.rs
cli/src/operator/: operator_loop.rs  operator_metrics.rs
clients/js/ncn_program/accounts/: config.ts  epochSnapshot.ts  epochState.ts  index.ts  nCNOperatorAccount.ts  operatorEntry.ts  operatorRegistry.ts  operatorSnapshot.ts  snapshot.ts  vaultRegistry.ts  voteCounter.ts  weightTable.ts
clients/js/ncn_program/errors/: ncnProgram.ts
clients/js/ncn_program/instructions/: adminRegisterStMint.ts  adminSetNewAdmin.ts  adminSetParameters.ts  adminSetStMint.ts  adminSetTieBreaker.ts  adminSetWeight.ts  castVote.ts  closeEpochAccount.ts  distributeNCNRewards.ts  distributeOperatorRewards.ts  distributeOperatorVaultRewardRoute.ts  distributeProtocolRewards.ts  distributeVaultRewards.ts  index.ts  initializeBallotBox.ts  initializeConfig.ts  initializeEpochSnapshot.ts  initializeEpochState.ts  initializeNCNRewardRouter.ts  initializeOperatorRegistry.ts  initializeOperatorSnapshot.ts  initializeOperatorVaultRewardRouter.ts  initializeSnapshot.ts  initializeVoteCounter.ts  initializeWeightTable.ts  reallocBallotBox.ts  reallocEpochSnapshot.ts  reallocNCNRewardRouter.ts  reallocOperatorRegistry.ts  reallocSnapshot.ts  reallocWeightTable.ts  registerOperator.ts  registerVault.ts  routeNCNRewards.ts  routeOperatorVaultRewards.ts  setEpochWeights.ts  snapshotVaultOperatorDelegation.ts  updateOperatorBN128Keys.ts  updateOperatorIpPort.ts  updateOperatorIpSocket.ts
clients/js/ncn_program/programs/: ncnProgram.ts
clients/js/ncn_program/types/: epochAccountStatus.ts  index.ts  operatorEntry.ts  operatorSnapshot.ts  stMintEntry.ts
clients/rust/ncn_program/: Cargo.toml
core/: Cargo.toml
core/src/: config.rs  constants.rs  discriminators.rs  epoch_snapshot.rs  epoch_state.rs  error.rs  errors.rs  g1_point.rs  g2_point.rs  instruction.rs  lib.rs  loaders.rs  ncn_operator_account.rs  operator_registry.rs  operator_vault_reward_router.rs  privkey.rs  snapshot.rs  utils.rs  vault_registry.rs  vote_counter.rs  weight_entry.rs  weight_table.rs
core/src/schemes/: mod.rs  sha256.rs  sha256_normalized.rs  traits.rs
idl/: ncn_program.json
integration_tests/: Cargo.toml
integration_tests/tests/fixtures/: ncn_program_client.rs  restaking_client.rs  test_builder.rs
integration_tests/tests/ncn_program/: admin_set_parameters.rs  admin_set_st_mint.rs  admin_update_weight_table.rs  cast_vote.rs  close_epoch_accounts.rs  epoch_state.rs  fuzz_simulation_tests.rs  initialize_config.rs  initialize_epoch_snapshot.rs  initialize_operator_registry.rs  initialize_operator_snapshot.rs  initialize_snapshot.rs  initialize_vault_registry.rs  initialize_vote_counter.rs  initialize_weight_table.rs  meta_tests.rs  mod.rs  register_operator.rs  register_vault.rs  restaking_variations.rs  set_new_admin.rs  set_tie_breaker.rs  simulation_test.rs  snapshot_vault_operator_delegation.rs  update_operator_bn128_keys.rs  update_operator_ip_port.rs  update_operator_ip_socket.rs
program/: Cargo.toml
program/src/: admin_initialize_config.rs  admin_register_st_mint.rs  admin_set_parameters.rs  cast_vote.rs  close_epoch_account.rs  initialize_epoch_snapshot.rs  initialize_operator_registry.rs  initialize_operator_snapshot.rs  initialize_snapshot.rs  initialize_vault_registry.rs  initialize_vote_counter.rs  initialize_weight_table.rs  lib.rs  realloc_epoch_snapshot.rs  realloc_operator_registry.rs  realloc_snapshot.rs  register_operator.rs  snapshot_vault_operator_delegation.rs  update_operator_bn128_keys.rs  update_operator_ip_port.rs  update_operator_ip_socket.rs
shank_cli/: Cargo.toml
