[package]
name = "ncn-program-bls-cli"
description = "NCN program template CLI"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[[bin]]
name = "ncn-program-bls-cli"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap-markdown = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
hex = "0.4"
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-vault-client = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
log = { workspace = true }
ncn-program = { workspace = true }
ncn-program-client = { workspace = true }
ncn-program-core = { workspace = true }
rand = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.0", features = ["hex"] }
solana-account-decoder = { workspace = true }
solana-client = { workspace = true }
solana-metrics = { workspace = true }
solana-rpc-client = { workspace = true }
solana-sdk = { workspace = true }
spl-token = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
tempfile = "3.8"
