[package]
name = "ncn-program-core"
description = "NCN program template core"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[dependencies]
borsh = { workspace = true }
bytemuck = { workspace = true }
jito-bytemuck = { workspace = true }
jito-restaking-core = { workspace = true }
jito-vault-core = { workspace = true }
shank = { workspace = true }
solana-program = { workspace = true }
spl-math = { workspace = true }
thiserror = { workspace = true }
solana-bn254 = { workspace = true }
num = { workspace = true }
dashu = { workspace = true }
solana-nostd-sha256 = { workspace = true }

# For client-side BN254 operations
[target.'cfg(not(target_os = "solana"))'.dependencies]
ark-bn254 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serialize = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
hex = { workspace = true }
