[package]
name = "ncn-program"
description = "NCN program template"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
readme = { workspace = true }

[lib]
crate-type = ["cdylib", "lib"]
name = "ncn_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
mainnet-beta = []
testnet = []
devnet = []
localhost = []

[dependencies]
borsh = { workspace = true }
jito-bytemuck = { workspace = true }
jito-jsm-core = { workspace = true }
jito-restaking-core = { workspace = true }
jito-restaking-program = { workspace = true }
jito-vault-core = { workspace = true }
jito-vault-program = { workspace = true }
ncn-program-core = { workspace = true }
solana-program = { workspace = true }
solana-security-txt = { workspace = true }

[dev-dependencies]
assert_matches = { workspace = true }
